--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "scripts": {
     "tauri": "TAURI_PRIVATE_KEY=~/.tauri/ytdlptauri.key tauri",
-    "tauri:bundle": "npm run tauri build -- --target x86_64-unknown-linux-gnu --bundles appimage,updater && npm run tauri build -- --target x86_64-pc-windows-msvc --bundles msi,updater",
+    "tauri:bundle:linux": "npm run tauri build -- --target x86_64-unknown-linux-gnu --bundles appimage,updater",
+    "tauri:bundle:windows": "npm run tauri build -- --target x86_64-pc-windows-msvc --bundles msi,updater",
+    "tauri:bundle": "npm run tauri:bundle:linux && npm run tauri:bundle:windows",
+    "cargo": "cd src-tauri && cargo",
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
