--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "tauri": "TAURI_PRIVATE_KEY=~/.tauri/ytdlptauri.key tauri",
-    "tauri:bundle:linux": "npm run tauri build -- --target x86_64-unknown-linux-gnu --bundles appimage",
-    "tauri:bundle:windows": "npm run tauri build -- --target x86_64-pc-windows-msvc --bundles msi",
+    "tauri": "tauri",
+    "tauri:bundle:linux": "TAURI_PRIVATE_KEY=~/.tauri/ytdlptauri.key tauri build --target x86_64-unknown-linux-gnu --bundles appimage",
+    "tauri:bundle:windows": "TAURI_PRIVATE_KEY=~/.tauri/ytdlptauri.key tauri build --target x86_64-pc-windows-msvc --bundles msi",
     "tauri:bundle": "npm run tauri:bundle:linux && npm run tauri:bundle:windows",
     "cargo": "cd src-tauri && cargo",
     "start": "vite",
@@ -33,6 +33,7 @@
     "@felte/solid": "^1.2.7",
     "@felte/validator-superstruct": "^1.0.15",
     "@gazatu/solid-spectre": "^1.5.1",
+    "@solid-primitives/i18n": "^2.0.0",
     "@solid-primitives/intersection-observer": "^2.1.0",
     "@solid-primitives/media": "^2.1.6",
     "@solid-primitives/memo": "^1.2.4",
