--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "2.0.0-alpha.4", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-alpha.8", features = ["clipboard-all", "dialog-all", "fs-all", "http-all", "os-all", "path-all", "protocol-asset", "shell-all", "updater", "window-all"] }
+tauri = { version = "2.0.0-alpha.8", features = ["clipboard-all", "dialog-all", "fs-all", "http-all", "os-all", "path-all", "protocol-asset", "shell-all", "window-all"] }
 
 [features]
 # by default Tauri runs in production mode
